PDFDocBuilder/bin/Debug/Import/C/DebenuPDFLibraryDLL1114.h

__declspec(dllimport) int __stdcall DPLDAGetAnnotationCount(int instanceID, int FileHandle, int PageRef);
__declspec(dllimport) int __stdcall DPLDAGetFormFieldCount(int instanceID, int FileHandle);
__declspec(dllimport) wchar_t* __stdcall DPLDAGetFormFieldTitle(int instanceID, int FileHandle, int FieldIndex);
__declspec(dllimport) char* __stdcall DPLDAGetFormFieldTitleA(int instanceID, int FileHandle, int FieldIndex);
__declspec(dllimport) wchar_t* __stdcall DPLDAGetFormFieldValue(int instanceID, int FileHandle, int FieldIndex);
__declspec(dllimport) char* __stdcall DPLDAGetFormFieldValueA(int instanceID, int FileHandle, int FieldIndex);
__declspec(dllimport) char* __stdcall DPLDAGetImageDataToString(int instanceID, int FileHandle, int ImageListID, int ImageIndex);
__declspec(dllimport) double __stdcall DPLDAGetImageDblProperty(int instanceID, int FileHandle, int ImageListID, int ImageIndex, int PropertyID);
__declspec(dllimport) int __stdcall DPLDAGetImageIntProperty(int instanceID, int FileHandle, int ImageListID, int ImageIndex, int PropertyID);
__declspec(dllimport) int __stdcall DPLDAGetImageListCount(int instanceID, int FileHandle, int ImageListID);
__declspec(dllimport) wchar_t* __stdcall DPLDAGetInformation(int instanceID, int FileHandle, wchar_t * Key);
__declspec(dllimport) char* __stdcall DPLDAGetInformationA(int instanceID, int FileHandle, char * Key);
__declspec(dllimport) int __stdcall DPLDAGetObjectCount(int instanceID, int FileHandle);
__declspec(dllimport) char* __stdcall DPLDAGetObjectToString(int instanceID, int FileHandle, int ObjectNumber);
__declspec(dllimport) double __stdcall DPLDAGetPageBox(int instanceID, int FileHandle, int PageRef, int BoxIndex, int Dimension);
__declspec(dllimport) char* __stdcall DPLDAGetPageContentToString(int instanceID, int FileHandle, int PageRef);
__declspec(dllimport) int __stdcall DPLDAGetPageCount(int instanceID, int FileHandle);
__declspec(dllimport) double __stdcall DPLDAGetPageHeight(int instanceID, int FileHandle, int PageRef);
__declspec(dllimport) int __stdcall DPLDAGetPageImageList(int instanceID, int FileHandle, int PageRef);
__declspec(dllimport) double __stdcall DPLDAGetPageWidth(int instanceID, int FileHandle, int PageRef);
__declspec(dllimport) wchar_t* __stdcall DPLDAGetTextBlockAsString(int instanceID, int TextBlockListID, int Index);
__declspec(dllimport) char* __stdcall DPLDAGetTextBlockAsStringA(int instanceID, int TextBlockListID, int Index);
__declspec(dllimport) double __stdcall DPLDAGetTextBlockBound(int instanceID, int TextBlockListID, int Index, int BoundIndex);
__declspec(dllimport) double __stdcall DPLDAGetTextBlockCharWidth(int instanceID, int TextBlockListID, int Index, int CharIndex);
__declspec(dllimport) double __stdcall DPLDAGetTextBlockColor(int instanceID, int TextBlockListID, int Index, int ColorComponent);
__declspec(dllimport) int __stdcall DPLDAGetTextBlockColorType(int instanceID, int TextBlockListID, int Index);
__declspec(dllimport) int __stdcall DPLDAGetTextBlockCount(int instanceID, int TextBlockListID);
__declspec(dllimport) wchar_t* __stdcall DPLDAGetTextBlockFontName(int instanceID, int TextBlockListID, int Index);
__declspec(dllimport) char* __stdcall DPLDAGetTextBlockFontNameA(int instanceID, int TextBlockListID, int Index);
__declspec(dllimport) double __stdcall DPLDAGetTextBlockFontSize(int instanceID, int TextBlockListID, int Index);
__declspec(dllimport) wchar_t* __stdcall DPLDAGetTextBlockText(int instanceID, int TextBlockListID, int Index);
__declspec(dllimport) char* __stdcall DPLDAGetTextBlockTextA(int instanceID, int TextBlockListID, int Index);
__declspec(dllimport) int __stdcall DPLDAHasPageBox(int instanceID, int FileHandle, int PageRef, int BoxIndex);
__declspec(dllimport) int __stdcall DPLDAHidePage(int instanceID, int FileHandle, int PageRef);
__declspec(dllimport) int __stdcall DPLDAMovePage(int instanceID, int FileHandle, int PageRef, int TargetPageRef, int Options);
__declspec(dllimport) int __stdcall DPLDANewPage(int instanceID, int FileHandle);
__declspec(dllimport) int __stdcall DPLDANewPages(int instanceID, int FileHandle, int PageCount);
__declspec(dllimport) int __stdcall DPLDANormalizePage(int instanceID, int FileHandle, int PageRef, int NormalizeOptions);
__declspec(dllimport) int __stdcall DPLDAOpenFile(int instanceID, wchar_t * InputFileName, wchar_t * Password);
__declspec(dllimport) int __stdcall DPLDAOpenFileA(int instanceID, char * InputFileName, char * Password);
__declspec(dllimport) int __stdcall DPLDAOpenFileReadOnly(int instanceID, wchar_t * InputFileName, wchar_t * Password);
__declspec(dllimport) int __stdcall DPLDAOpenFileReadOnlyA(int instanceID, char * InputFileName, char * Password);
__declspec(dllimport) int __stdcall DPLDAPageRotation(int instanceID, int FileHandle, int PageRef);
__declspec(dllimport) int __stdcall DPLDAReleaseImageList(int instanceID, int FileHandle, int ImageListID);
__declspec(dllimport) int __stdcall DPLDAReleaseTextBlocks(int instanceID, int TextBlockListID);
__declspec(dllimport) int __stdcall DPLDARemoveUsageRights(int instanceID, int FileHandle);
__declspec(dllimport) int __stdcall DPLDARenderPageToDC(int instanceID, int FileHandle, int PageRef, double DPI, HDC DC);
__declspec(dllimport) int __stdcall DPLDARenderPageToFile(int instanceID, int FileHandle, int PageRef, int Options, double DPI, wchar_t * FileName);
__declspec(dllimport) int __stdcall DPLDARenderPageToFileA(int instanceID, int FileHandle, int PageRef, int Options, double DPI, char * FileName);
__declspec(dllimport) char* __stdcall DPLDARenderPageToString(int instanceID, int FileHandle, int PageRef, int Options, double DPI);
__declspec(dllimport) int __stdcall DPLDARotatePage(int instanceID, int FileHandle, int PageRef, int Angle, int Options);
__declspec(dllimport) int __stdcall DPLDASaveAsFile(int instanceID, int FileHandle, wchar_t * OutputFileName);
__declspec(dllimport) int __stdcall DPLDASaveAsFileA(int instanceID, int FileHandle, char * OutputFileName);
__declspec(dllimport) int __stdcall DPLDASaveImageDataToFile(int instanceID, int FileHandle, int ImageListID, int ImageIndex, wchar_t * ImageFileName);
__declspec(dllimport) int __stdcall DPLDASaveImageDataToFileA(int instanceID, int FileHandle, int ImageListID, int ImageIndex, char * ImageFileName);
__declspec(dllimport) int __stdcall DPLDASetInformation(int instanceID, int FileHandle, wchar_t * Key, wchar_t * NewValue);
__declspec(dllimport) int __stdcall DPLDASetInformationA(int instanceID, int FileHandle, char * Key, char * NewValue);
__declspec(dllimport) int __stdcall DPLDASetPageBox(int instanceID, int FileHandle, int PageRef, int BoxIndex, double X1, double Y1, double X2, double Y2);
__declspec(dllimport) int __stdcall DPLDASetPageLayout(int instanceID, int FileHandle, int NewPageLayout);
__declspec(dllimport) int __stdcall DPLDASetPageMode(int instanceID, int FileHandle, int NewPageMode);
__declspec(dllimport) int __stdcall DPLDASetPageSize(int instanceID, int FileHandle, int PageRef, double PntWidth, double PntHeight);
__declspec(dllimport) int __stdcall DPLDASetTextExtractionArea(int instanceID, double Left, double Top, double Width, double Height);
__declspec(dllimport) int __stdcall DPLDASetTextExtractionOptions(int instanceID, int OptionID, int NewValue);
__declspec(dllimport) int __stdcall DPLDASetTextExtractionScaling(int instanceID, int Options, double Horizontal, double Vertical);
__declspec(dllimport) int __stdcall DPLDASetTextExtractionWordGap(int instanceID, double NewWordGap);
__declspec(dllimport) int __stdcall DPLDAShiftedHeader(int instanceID, int FileHandle);