PDFDocBuilder/bin/Debug/Import/VB6/DebenuPDFLibraryDLL1114.bas

  ByVal iInstanceID As Long, ByVal iFileHandle As Long, _
  ByVal iPage As Long) As Long
Public Declare Function DPLDAGetAnnotationCount LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAGetAnnotationCount" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, _
  ByVal iPageRef As Long) As Long
Public Declare Function DPLDAGetFormFieldCount LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAGetFormFieldCount" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long) As Long
Public Declare Function DPLDAGetFormFieldTitle LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAGetFormFieldTitleA" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, _
  ByVal iFieldIndex As Long) As String
Public Declare Function DPLDAGetFormFieldValue LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAGetFormFieldValueA" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, _
  ByVal iFieldIndex As Long) As String
Public Declare Function DPLDAGetImageDataToString LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAGetImageDataToString" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, _
  ByVal iImageListID As Long, ByVal iImageIndex As Long) As String
Public Declare Function DPLDAGetImageDblProperty LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAGetImageDblProperty" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, _
  ByVal iImageListID As Long, ByVal iImageIndex As Long, _
  ByVal iPropertyID As Long) As Double
Public Declare Function DPLDAGetImageIntProperty LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAGetImageIntProperty" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, _
  ByVal iImageListID As Long, ByVal iImageIndex As Long, _
  ByVal iPropertyID As Long) As Long
Public Declare Function DPLDAGetImageListCount LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAGetImageListCount" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, _
  ByVal iImageListID As Long) As Long
Public Declare Function DPLDAGetInformation LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAGetInformationA" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, _
  ByVal sKey As String) As String
Public Declare Function DPLDAGetObjectCount LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAGetObjectCount" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long) As Long
Public Declare Function DPLDAGetObjectToString LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAGetObjectToString" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, _
  ByVal iObjectNumber As Long) As String
Public Declare Function DPLDAGetPageBox LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAGetPageBox" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, ByVal iPageRef As Long, _
  ByVal iBoxIndex As Long, ByVal iDimension As Long) As Double
Public Declare Function DPLDAGetPageContentToString LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAGetPageContentToString" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, _
  ByVal iPageRef As Long) As String
Public Declare Function DPLDAGetPageCount LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAGetPageCount" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long) As Long
Public Declare Function DPLDAGetPageHeight LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAGetPageHeight" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, _
  ByVal iPageRef As Long) As Double
Public Declare Function DPLDAGetPageImageList LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAGetPageImageList" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, _
  ByVal iPageRef As Long) As Long
Public Declare Function DPLDAGetPageWidth LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAGetPageWidth" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, _
  ByVal iPageRef As Long) As Double
Public Declare Function DPLDAGetTextBlockAsString LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAGetTextBlockAsStringA" ( _
  ByVal iInstanceID As Long, ByVal iTextBlockListID As Long, _
  ByVal iIndex As Long) As String
Public Declare Function DPLDAGetTextBlockBound LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAGetTextBlockBound" ( _
  ByVal iInstanceID As Long, ByVal iTextBlockListID As Long, _
  ByVal iIndex As Long, ByVal iBoundIndex As Long) As Double
Public Declare Function DPLDAGetTextBlockCharWidth LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAGetTextBlockCharWidth" ( _
  ByVal iInstanceID As Long, ByVal iTextBlockListID As Long, _
  ByVal iIndex As Long, ByVal iCharIndex As Long) As Double
Public Declare Function DPLDAGetTextBlockColor LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAGetTextBlockColor" ( _
  ByVal iInstanceID As Long, ByVal iTextBlockListID As Long, _
  ByVal iIndex As Long, ByVal iColorComponent As Long) As Double
Public Declare Function DPLDAGetTextBlockColorType LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAGetTextBlockColorType" ( _
  ByVal iInstanceID As Long, ByVal iTextBlockListID As Long, _
  ByVal iIndex As Long) As Long
Public Declare Function DPLDAGetTextBlockCount LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAGetTextBlockCount" ( _
  ByVal iInstanceID As Long, ByVal iTextBlockListID As Long) As Long
Public Declare Function DPLDAGetTextBlockFontName LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAGetTextBlockFontNameA" ( _
  ByVal iInstanceID As Long, ByVal iTextBlockListID As Long, _
  ByVal iIndex As Long) As String
Public Declare Function DPLDAGetTextBlockFontSize LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAGetTextBlockFontSize" ( _
  ByVal iInstanceID As Long, ByVal iTextBlockListID As Long, _
  ByVal iIndex As Long) As Double
Public Declare Function DPLDAGetTextBlockText LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAGetTextBlockTextA" ( _
  ByVal iInstanceID As Long, ByVal iTextBlockListID As Long, _
  ByVal iIndex As Long) As String
Public Declare Function DPLDAHasPageBox LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAHasPageBox" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, ByVal iPageRef As Long, _
  ByVal iBoxIndex As Long) As Long
Public Declare Function DPLDAHidePage LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAHidePage" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, _
  ByVal iPageRef As Long) As Long
Public Declare Function DPLDAMovePage LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAMovePage" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, ByVal iPageRef As Long, _
  ByVal iTargetPageRef As Long, ByVal iOptions As Long) As Long
Public Declare Function DPLDANewPage LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDANewPage" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long) As Long
Public Declare Function DPLDANewPages LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDANewPages" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, _
  ByVal iPageCount As Long) As Long
Public Declare Function DPLDANormalizePage LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDANormalizePage" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, ByVal iPageRef As Long, _
  ByVal iNormalizeOptions As Long) As Long
Public Declare Function DPLDAOpenFile LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAOpenFileA" ( _
  ByVal iInstanceID As Long, ByVal sInputFileName As String, _
  ByVal sPassword As String) As Long
Public Declare Function DPLDAOpenFileReadOnly LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAOpenFileReadOnlyA" ( _
  ByVal iInstanceID As Long, ByVal sInputFileName As String, _
  ByVal sPassword As String) As Long
Public Declare Function DPLDAPageRotation LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAPageRotation" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, _
  ByVal iPageRef As Long) As Long
Public Declare Function DPLDAReleaseImageList LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAReleaseImageList" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, _
  ByVal iImageListID As Long) As Long
Public Declare Function DPLDAReleaseTextBlocks LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAReleaseTextBlocks" ( _
  ByVal iInstanceID As Long, ByVal iTextBlockListID As Long) As Long
Public Declare Function DPLDARemoveUsageRights LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDARemoveUsageRights" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long) As Long
Public Declare Function DPLDARenderPageToDC LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDARenderPageToDC" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, ByVal iPageRef As Long, _
  ByVal dDPI As Double, ByVal cDC As Long) As Long
Public Declare Function DPLDARenderPageToFile LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDARenderPageToFileA" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, ByVal iPageRef As Long, _
  ByVal iOptions As Long, ByVal dDPI As Double, _
  ByVal sFileName As String) As Long
Public Declare Function DPLDARenderPageToString LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDARenderPageToString" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, ByVal iPageRef As Long, _
  ByVal iOptions As Long, ByVal dDPI As Double) As String
Public Declare Function DPLDARotatePage LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDARotatePage" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, ByVal iPageRef As Long, _
  ByVal iAngle As Long, ByVal iOptions As Long) As Long
Public Declare Function DPLDASaveAsFile LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDASaveAsFileA" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, _
  ByVal sOutputFileName As String) As Long
Public Declare Function DPLDASaveImageDataToFile LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDASaveImageDataToFileA" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, _
  ByVal iImageListID As Long, ByVal iImageIndex As Long, _
  ByVal sImageFileName As String) As Long
Public Declare Function DPLDASetInformation LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDASetInformationA" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, ByVal sKey As String, _
  ByVal sNewValue As String) As Long
Public Declare Function DPLDASetPageBox LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDASetPageBox" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, ByVal iPageRef As Long, _
  ByVal iBoxIndex As Long, ByVal dX1 As Double, ByVal dY1 As Double, _
  ByVal dX2 As Double, ByVal dY2 As Double) As Long
Public Declare Function DPLDASetPageLayout LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDASetPageLayout" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, _
  ByVal iNewPageLayout As Long) As Long
Public Declare Function DPLDASetPageMode LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDASetPageMode" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, _
  ByVal iNewPageMode As Long) As Long
Public Declare Function DPLDASetPageSize LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDASetPageSize" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, ByVal iPageRef As Long, _
  ByVal dPntWidth As Double, ByVal dPntHeight As Double) As Long
Public Declare Function DPLDASetTextExtractionArea LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDASetTextExtractionArea" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double) As Long
Public Declare Function DPLDASetTextExtractionOptions LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDASetTextExtractionOptions" ( _
  ByVal iInstanceID As Long, ByVal iOptionID As Long, _
  ByVal iNewValue As Long) As Long
Public Declare Function DPLDASetTextExtractionScaling LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDASetTextExtractionScaling" ( _
  ByVal iInstanceID As Long, ByVal iOptions As Long, _
  ByVal dHorizontal As Double, ByVal dVertical As Double) As Long
Public Declare Function DPLDASetTextExtractionWordGap LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDASetTextExtractionWordGap" ( _
  ByVal iInstanceID As Long, ByVal dNewWordGap As Double) As Long
Public Declare Function DPLDAShiftedHeader LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAShiftedHeader" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long) As Long
